# hn-daily

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __main__.py  history.json  pyproject.toml  requirements.txt  test.py
.claude/: settings.local.json
.claude/agents/: crawler.md  deputy-editor.md  editor.md  reviewer.md  writer.md
.claude/commands/: daily.md
.claude/skills/chinese-writing/: SKILL.md
.github/workflows/: daily_digest.yml  deploy.yml
.pi/: README.md  settings.json
.pi/prompts/: daily.md
.pi/skills/chinese-writing/: SKILL.md
agent/.claude/: CLAUDE.md
daily/: daily-2026-01-21.md  daily-2026-01-22.md  daily-2026-01-23.md  daily-2026-01-24.md  daily-2026-01-25.md  daily-2026-01-27.md  daily-2026-01-29.md  daily-2026-01-30.md  daily-2026-02-03.md
daily/2026/01/: 2026-01-21.md  2026-01-26.md  2026-01-28.md  2026-01-31.md
daily/2026/02/: 2026-02-01.md  2026-02-02.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  (+7 more)
hn_daily/: __init__.py  __main__.py  cli.py  models.py  timezone.py
hn_daily/services/: __init__.py  comment_service.py  crawler_service.py  history_service.py  storage_service.py  story_service.py
site/: hugo.toml
site/content/: _index.md
site/static/: CNAME
tests/: test_comment_service.py  test_crawler_service.py  test_history_service.py  test_models.py  test_storage_service.py  test_story_service.py
(+139 files in other folders)
